# simple_retarget

./: .gitignore  2_left_arm_joints.pt  2_right_arm_joints.pt  CMakeLists.txt  README.md  boxing_arm_data.json  gradient_descent_test.py  image_proc.py  inverse_kinematics.py  ivp.py  joint_distance_calculator.py  left_arm_joints.pt  link_length_calculator.py  log_joint_angles.py  mopping_data_new.json  package.xml  pose_estimation_demo.py  retarget_node.py  right_arm_joints.pt  robot_analysis.py  simple_retarget.py  simple_retarget.yaml  simplest_retarget.py  striking_data_new.json  testing_stuff.py  tf_joint_motion.json
robot_description/: tiago_dual_generated.urdf  tiago_left_arm_1.urdf  tiago_right_arm_1.urdf  yumi.urdf
