<?xml version="1.0"?>
<package>
  <name>simple_retarget</name>
  <version>0.5.1</version>
  <description>The simple_retarget package</description>
  <maintainer email="tank@nebula-intelligence.com">Tank</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>rospy</run_depend>

</package>
